# PyCBD

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
evaluation/: README.md  evaluation.py  evaluation_examples.py  generate_augment.py
examples/: component_examples.py  diagnosing_problems.py  standard_pipeline_examples.py
examples/images/: thermal.tiff
src/PyCBD/: __init__.py  logger_configuration.py  pipelines.py
src/PyCBD/checkerboard_detection/: __init__.py  checkerboard_detector.py
src/PyCBD/checkerboard_detection/DLL/: Checkerboard.cpp  Checkerboard.py  _Checkerboard.cp310-win_amd64.pyd  _Checkerboard.cp311-win_amd64.pyd  _Checkerboard.cp312-win_amd64.pyd  _Checkerboard.cp313-win_amd64.pyd  _Checkerboard.cp38-win_amd64.pyd  example.cc
src/PyCBD/checkerboard_enhancement/: __init__.py  checkerboard_enhancer.py
